--- a/docsrc/jupyter_notebooks/SolarSystem/SolarSystem.ipynb
+++ b/docsrc/jupyter_notebooks/SolarSystem/SolarSystem.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Creating and exploring the OWL/RL + SWRL Ontologies using CogniPy by Cognitum Services S.A."
+    "# Solar System"
    ]
   },
   {
