--- a/docsrc/jupyter_notebooks/Pizza/Pizza.ipynb
+++ b/docsrc/jupyter_notebooks/Pizza/Pizza.ipynb
@@ -1,6 +1,13 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Pizza from OWL"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
